--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
         "php": ">=7.1.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "license": "MIT"
 }
